--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,20 @@ services:
       - "3000:3000"
     expose:
       - "3000"
+    links:
+      - elasticsearch
+    depends_on:
+      - elasticsearch
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    expose:
+      - "9200"
+    volumes:
+      - elastic-data:/usr/share/elasticsearch/data
+
+volumes:
+  elastic-data:
+    driver: local
