--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   web:
     build: .
+    command: bash -c "while [ true ]; do sleep 10; done"
     volumes:
       - ".:/magic_logger/"
     environment:
